--- a/app_client/package.json
+++ b/app_client/package.json
@@ -4,30 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	  "start":"live-server"
+    "start": "live-server"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC", 
-
+  "license": "isc",
   "dependencies": {
-	"@angular/common":  "2.0.0-rc.1",
-	"@angular/compiler":  "2.0.0-rc.1",
-	"@angular/core":  "2.0.0-rc.1",
-	"@angular/http":  "2.0.0-rc.1",
-	"@angular/platform-browser":  "2.0.0-rc.1",
-	"@angular/platform-browser-dynamic":  "2.0.0-rc.1",
-	"@angular/router":  "2.0.0-rc.1",
-	"@angular/router-deprecated":  "2.0.0-rc.1",
-	"@angular/upgrade":  "2.0.0-rc.1",
-
-	"reflect-metadata": "0.1.3",
-	"rxjs": "5.0.0-beta.6",
-	"zone.js": "0.6.12",
-    "systemjs": "0.19.24",
-    "es6-shim": "^0.35.0",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
     "bootstrap": "^3.3.6",
-    "jquery": "^2.2.2"
+    "es6-shim": "^0.35.0",
+    "jquery": "^2.2.2",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.24",
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
     "live-server": "^0.8.2",
